# Notes

./: README.md  吃灰列表.md
Courses/[2024-09-04] Ray Tracing in One Weekend/raytracing/: Cargo.toml  image_c02.ppm  image_c03.ppm  image_c05.ppm  image_c06.ppm
Courses/[2024-09-04] Ray Tracing in One Weekend/raytracing/src/: camera.rs  main.rs
Courses/[2024-09-04] Ray Tracing in One Weekend/raytracing/workspace/c01-ppm-image/: Cargo.toml  image.ppm
Courses/[2024-09-04] Ray Tracing in One Weekend/raytracing/workspace/c01-ppm-image/src/: main.rs
Courses/[2024-09-04] Ray Tracing in One Weekend/raytracing/workspace/c02-ray/: Cargo.toml
Courses/[2024-09-04] Ray Tracing in One Weekend/raytracing/workspace/c03-sphere/: Cargo.toml
Courses/[2024-09-04] Ray Tracing in One Weekend/raytracing/workspace/c04-hittable/: Cargo.toml
Courses/[2024-09-04] Ray Tracing in One Weekend/raytracing/workspace/c05-camera/: Cargo.toml
Courses/[2024-09-04] Ray Tracing in One Weekend/raytracing/workspace/c06-antialiasing/: Cargo.toml
Courses/[2024-09-04] Ray Tracing in One Weekend/raytracing/workspace/c07-diffuse-materials/: Cargo.toml
Courses/[2024-09-04] Ray Tracing in One Weekend/raytracing/workspace/c08-gamma-correction/: Cargo.toml
Courses/[2024-09-04] Ray Tracing in One Weekend/raytracing/workspace/c09-metal/: Cargo.toml
Courses/[2024-09-04] Ray Tracing in One Weekend/raytracing/workspace/c10-dielectric/: Cargo.toml
Courses/[2024-09-04] Ray Tracing in One Weekend/raytracing/workspace/c11-camera-pro/: Cargo.toml
Courses/[2024-09-04] Ray Tracing in One Weekend/raytracing/workspace/c12-defocus-blur/: Cargo.toml
Courses/[2024-09-08] Ray Tracing The Next Week/raytracing/: Cargo.toml  flake.nix
Courses/[2024-09-08] Ray Tracing The Next Week/raytracing/src/: camera.rs  lib.rs  main.rs  material.rs  texture.rs  utils.rs
Courses/[2024-09-08] Ray Tracing The Next Week/raytracing/src/primitive/: mod.rs  quad.rs  sphere.rs
Courses/[2024-09-08] Ray Tracing The Next Week/raytracing/src/world/: bvh.rs  list.rs  mod.rs
Gaming x Coding/Bevy/: 1. 概述.md  Camera3dBundle.md  CameraBundle.md  Cargo.toml  README.md  Rendering.md  Schedule.md  源码阅读.md
Gaming x Coding/Bevy/playgrounds/p1-basic/: Cargo.toml  README.md
Gaming x Coding/Bevy/playgrounds/p1-basic/src/: main.rs
Gaming x Coding/Bevy/playgrounds/p2-2d-shapes/: Cargo.toml  README.md
Gaming x Coding/Bevy/playgrounds/p2-2d-shapes/src/: main.rs
Gaming x Coding/Bevy/playgrounds/p3-bevy-egui/: Cargo.toml  README.md
Gaming x Coding/Bevy/playgrounds/p3-bevy-egui/src/: main.rs
Gaming x Coding/Bevy/playgrounds/p4-evt-viewer/: Cargo.toml  README.md
Gaming x Coding/Bevy/playgrounds/p4-evt-viewer/src/: lib.rs  main.rs
Gaming x Coding/Bevy/playgrounds/p5-evt-viewer-plugin/: Cargo.toml  README.md
Gaming x Coding/Bevy/playgrounds/p5-evt-viewer-plugin/src/: lib.rs  main.rs
Gaming x Coding/Bevy/playgrounds/p6-render-to-texture/: Cargo.toml  README.md
Gaming x Coding/Bevy/playgrounds/p6-render-to-texture/src/: main.rs
Gaming x Coding/Bevy/playgrounds/p6-shader-instancing/: Cargo.toml  README.md
Gaming x Coding/Bevy/playgrounds/p6-shader-instancing/src/: main.rs
Gaming x Coding/Bevy/playgrounds/p7-shader-instancing/: Cargo.toml  README.md
Gaming x Coding/Bevy/playgrounds/p7-shader-instancing/src/: lib.rs  main.rs
Gaming x Coding/Bevy/playgrounds/p8-noise-terrain/: Cargo.toml  README.md
Gaming x Coding/Bevy/playgrounds/p8-noise-terrain/src/: main.rs
STM32/c2-tutorial/workspace/aht20/: Cargo.toml  README.md
STM32/c2-tutorial/workspace/aht20/src/: main.rs
STM32/c2-tutorial/workspace/p1-led-keys/: Cargo.toml  README.md  build.rs
STM32/c2-tutorial/workspace/p1-led-keys/src/: main.rs
(+134 files in other folders)
