[workspace]
members = ["playgrounds/*"]
resolver = "2" # Important! wgpu/Bevy needs this!

[workspace.dependencies]
bevy = "0.14.2"
bevy_egui = "0.29.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3