[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
    "workspace/c01-ppm-image",
    "workspace/c02-ray",
    "workspace/c03-sphere",
]

[workspace.dependencies]
glam = "0.29.0"
env_logger = "0.11.5"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.3"
log = "0.4.22"
