[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
    "workspace/c01-ppm-image",
    "workspace/c02-ray",
    "workspace/c03-sphere",
    "workspace/c04-hittable",
    "workspace/c05-camera",
    "workspace/c06-antialiasing",
    "workspace/c07-diffuse-materials",
    "workspace/c08-gamma-correction",
    "workspace/c09-metal",
    "workspace/c10-dielectric",
]

[workspace.dependencies]
glam = "0.29.0"
env_logger = "0.11.5"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.3"
log = "0.4.22"
rand = "0.8.5"
image = { version = "0.25.2", features = ["rayon"] }
rayon = "1.10.0"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3