[package]
name = "aht20"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aht20"
test = false
bench = false

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
cortex-m-semihosting.workspace = true
stm32f1xx-hal.workspace = true
panic-halt.workspace = true
nb.workspace = true
aht20-driver = { version = "1.2.2", default-features = false } # stm32f1xx-hal doesn't yet support version 1.0 of the embedded HAL
sh1106 = "0.5.0" # IC compatible with ch1116
shared-bus = "0.3.1" # for shared bus
embedded-graphics = "0.8.1"
heapless = { version = "0.8.0", features = ["ufmt"] }

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
